@startuml

' !theme monokai_npp from ..\..\.styles
scale 2

class Connectable {
    +connect_to()
}

class Neuron {
    +name: <i>str</i>
    +inputs: <i>list</i> [Neuron]
    +outputs: <i>list</i> [Neuron]
    __iter__()
    +show_connections()
}

abstract list

class NeuronLayer << composite >> {
    <font size=11><font "IBM Plex Mono">[Neuron]</font>
    --
    +name: <i>str</i>
}


hide abstract empty members
hide Connectable empty members

list <|-- NeuronLayer

Connectable <|-- Neuron
Connectable <|-- NeuronLayer

NeuronLayer o-left- Neuron

@enduml
